# sadpt

./: CLAUDE.md  README.md  config.py  dist_utils.py  modal_train.py  pyproject.toml  train.py  train_shakespeare.py
data/: __init__.py  collate.py  dataset.py  shakespeare.py  sharding.py
dp/: __init__.py  aggregator.py  signals.py  weights.py
model/: __init__.py  gpt.py  loss.py
utils/: __init__.py  checkpoint.py  logging.py  seed.py
