[project]
name = "sadpt"
version = "0.1.0"
description = "Signal-Aware Data Parallel Training - dynamically reweight workers based on gradient quality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "modal>=1.3.0.post1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
